# wildmeshing-toolkit

./: .gitignore  CMakeLists.txt  _a_m_i_p_s_optimization_smoothing_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__dep__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp__incl.map  _a_m_i_p_s_optimization_smoothing_8hpp__incl.md5  _a_m_i_p_s_optimization_smoothing_8hpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8cpp__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8cpp_source.html  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__incl.map  _a_m_i_p_s_optimization_smoothing_periodic_8hpp__incl.md5  _a_m_i_p_s_optimization_smoothing_periodic_8hpp_source.html  _accessor_8hpp.html  _accessor_8hpp__dep__incl.map  _accessor_8hpp__dep__incl.md5  _accessor_8hpp__incl.map  _accessor_8hpp__incl.md5  _accessor_8hpp_source.html  _accessor_8hxx__dep__incl.map  _accessor_8hxx__dep__incl.md5  _accessor_8hxx__incl.map  _accessor_8hxx__incl.md5  _accessor_8hxx_source.html  _accessor_base_8hpp.html  _accessor_base_8hpp__dep__incl.map  _accessor_base_8hpp__dep__incl.md5  _accessor_base_8hpp__incl.map  _accessor_base_8hpp__incl.md5  _accessor_base_8hpp_source.html  _accessor_base_8hxx__dep__incl.map  _accessor_base_8hxx__dep__incl.md5  _accessor_base_8hxx__incl.map  _accessor_base_8hxx__incl.md5  _accessor_base_8hxx_source.html  _and_operation_sequence_8cpp__incl.map  _and_operation_sequence_8cpp__incl.md5  (+5145 more)
app/: CMakeLists.txt
app/extreme_opt/: CMakeLists.txt  ExtremeOpt.cpp  ExtremeOpt.h  Parameters.h  SYMDIR.cpp  SYMDIR.h  SYMDIR_NEW.cpp  SYMDIR_NEW.h  Smooth.cpp  autodiff_jakob.h  collapse.cpp  main.cpp  opt.cpp  opt_utils.cpp  rref.cpp  rref.h  smooth.cpp  split.cpp  swap.cpp  test_json.cpp  test_opt.cpp  viewer.cpp
app/extreme_opt/tests/: CMakeLists.txt  test_ops.cpp
app/remeshing/src/remeshing/: UniformRemeshing.cpp
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+103 more)
src/wmtk/: AttributeCollection.hpp  ExecutionScheduler.hpp  OperationLogger.cpp  TetMesh.cpp  TetMesh.h  TriMesh.cpp  TriMesh.h  TriMeshOperation.cpp  TriMeshOperation.h  TriMesh_operations.cpp
src/wmtk/operations/: TriMeshEdgeSplitOperation.cpp
src/wmtk/utils/: AttributeRecorder.cpp  AttributeRecorder.h  Hdf5Utils.cpp  OperationLogger.cpp  OperationLogger.h  OperationRecordingDataTypes.cpp  OperationRecordingDataTypes.hpp  OperationReplayer.cpp  OperationReplayer.h  OperatorRecordingDataTypes.cpp  TransportablePoints.cpp  TransportablePoints.hpp  TriMeshOperationLogger.cpp  TriMeshOperationLogger.h
tests/: 2d_tests.cpp  test_recording.cpp
